2007-04-06  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/krb5-security.c: Report client hostname.

2007-04-06  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/tapelist.c (append_to_tape): Don't call dump_tapelist.

2007-04-05  Dustin J. Mitchell <dustin@zmanda.com>
	* contrib/macosx/org.amanda.amandad.bsd*.plist: updated to use username
	  'amandabackup'

2007-04-05  Dustin J. Mitchell <dustin@zmanda.com>
	* amplot/amplot.sh.in configure.in config/acinclude.m4i:
	  move checks for gnuplot, awk to runtime for easier packaging;
	  add fake gettext functions to ease the transition to
	  full gettext support

2007-04-05  Dustin J. Mitchell <dustin@zmanda.com> 
	* server-src/amindex.c: fix bug where debug fd was closed by safe_fd,
	  remove remote_hostname, rewrite to use getaddrinfo/getnameinfo
	* server-src/dumper.c server-src/amcheck.c recover-src/set_commands.c:
	  use getaddrinfo/getnameinfo
	* common-src/security-util.[ch]: add try_resolving_hostname()
	* common-src/ssh-security.c common-src/rsh-security.c:
	  use try_resolving_hostname, rewrite to avoid gethostbyname
	* common-src/krb5-security.c: use getaddrinfo instead of gethostbyname

2007-04-05  Dustin J. Mitchell <dustin@zmanda.com>
	* changer-src/chg-lib.sh.in changer-src/chg-mtx.sh.in
	  changer-src/chg-manual.sh.in changer-src/chg-zd-mtx.sh.in
	  changer-src/chg-multi.sh.in changer-src/Makefile.am
	  configure.in: make the path to MTX and other executables configurable
	  in changer scripts; introduce new changer shell library to reduce
	  code duplication; add fake gettext functions to ease the transition to
	  full gettext support

2007-04-04  Dustin J. Mitchell <dustin@zmanda.com>
	* server-src/dumper.c server-src/chunker.c: remove assumed ENOSPC
	  error in static write_tapeheader functions

2007-04-03  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-util.c: Remove buggy &.

2007-04-03  Jean-Louis Martineau <martineau@zmanda.com>